fixed video and scrollbar

--- a/resources/css/eventPage.css
+++ b/resources/css/eventPage.css
@@ -2,25 +2,26 @@
 
 #eventPageLeader {
 	position: relative;
-	background-color: white;
+	background: rgba(255, 255, 255, 0.85) ;
 	color: black;
 	width: 500px;
 	height: 500px;
 	text-align: center;
 	width: 75%;
-	margin-top: 30px;
+	margin-top: 40px;
+	padding-top: 5px;
 	padding-right: 50px;
 	padding-left: 50px;
 }
 
 .eventName{
 	font-family: 'Lobster', cursive;
-	font-size:40px;
+	font-size: 40px;
 	text-align:center;
 }
 
 .eventLocationTime{
-	font-size:20px;
+	font-size: 20px;
 	text-align:center;
 }
 
